--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body, html {
 }
 
 #root {
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative; 
-}
+  min-height: 100vh;
+  }
